--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,6 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp"
     android:background="@drawable/degradado"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
 
@@ -17,8 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/side_item_layout_componet_small"
-
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
@@ -170,7 +167,7 @@
             android:text="Recordar usuario"
             android:buttonTint="@color/colorSecondaryText"
             android:textColor="@color/colorSecondaryText"
-            android:layout_margin="5dp"
+            android:layout_margin="8dp"
             android:textSize="15sp"
             android:layout_gravity="center"
             />
@@ -183,7 +180,7 @@
             android:backgroundTint="@color/colorAccent"
             android:text="Ingresar"
             android:textColor="#ffffff"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             />
 
 
@@ -191,7 +188,7 @@
             android:id="@+id/log_tv_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Registrate"
+            android:text="Registrarse"
             android:gravity="center"
             android:textSize="16sp"
             android:textColor="@color/colorSecondaryText"/>
