--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_marginLeft="15dp">
 
 
             <LinearLayout
@@ -181,7 +181,7 @@
                 android:id="@+id/log_btn_entrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="12dp"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:backgroundTint="@color/colorAccent"
                 android:text="Ingresar"
